--- a/src/Components/Signup.css
+++ b/src/Components/Signup.css
@@ -115,6 +115,12 @@
     border-radius: 3px;
 }
 
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
 .signup-input-container button{
     height: 50px;
     width: 320px;
@@ -127,4 +133,10 @@
     cursor: pointer;
     border-radius: 8px;
     margin-top: 10px;
+}
+
+.signup-input-container button:hover{
+    background-color: transparent;
+    color: #fff4e8;
+    border: 1px solid #fff4e8;
 }
