--- a/src/Components/Nav.css
+++ b/src/Components/Nav.css
@@ -7,7 +7,7 @@
     font-family: "Poppins", sans-serif;
 }
 
-.nav-container{
+.nav-container {
     background-color: #fff;
     height: 80px;
     width: 85%;
@@ -21,7 +21,7 @@
     box-shadow: 1px 5px 8px rgb(177, 170, 170);
 }
 
-.nav-logo{
+.nav-logo {
     background-color: #fff;
     height: 100%;
     width: 20%;
@@ -29,14 +29,14 @@
     align-items: center;
 }
 
-.nav-logo img{
+.nav-logo img {
     height: 180px;
     width: 260px;
     object-fit: contain;
     cursor: pointer;
 }
 
-.nav-links{
+.nav-links {
     background-color: #fff;
     height: 100%;
     width: 60%;
@@ -45,21 +45,31 @@
     justify-content: center;
 }
 
-ul{
+.nav-links a{
+    text-decoration: none;
+    color: inherit;
+    display: block;
+}
+
+ul {
     display: flex;
     gap: 60px;
     list-style: none;
     text-decoration: none;
 }
 
-ul li{
+ul li {
     color: #000;
     font-size: 18px;
     font-weight: 500;
     cursor: pointer;
 }
 
-.nav-cart{
+ul li:hover {
+    color: #ff4f00;
+}
+
+.nav-cart {
     background-color: #fff;
     height: 100%;
     width: 20%;
@@ -69,22 +79,21 @@ ul li{
     padding-right: 30px;
 }
 
-.nav-cart img{
+.nav-cart img {
     height: 35px;
     width: 35px;
     object-fit: contain;
     cursor: pointer;
 }
 
-.cart-total{
+.cart-total {
     background-color: #000;
     color: #fff;
     height: 16px;
     width: 16px;
     font-size: 10px;
     border-radius: 50%;
-    text-align: center;
     margin-bottom: 30px;
+    text-align: center;
+    cursor: pointer;
 }
-
-
