--- a/src/Components/Nav.css
+++ b/src/Components/Nav.css
@@ -12,7 +12,7 @@
     height: 80px;
     width: 85%;
     margin-top: 30px;
-    margin-left: 8%;
+    margin-left: 7.5%;
     border-radius: 5px;
     display: flex;
     align-items: center;
@@ -80,10 +80,11 @@ ul li:hover {
 }
 
 .nav-cart img {
-    height: 35px;
-    width: 35px;
+    height: 30px;
+    width: 30px;
     object-fit: contain;
     cursor: pointer;
+    margin-left: 15px;
 }
 
 .cart-total {
