--- a/src/Components/Nav.css
+++ b/src/Components/Nav.css
@@ -11,13 +11,14 @@
     background-color: #fff;
     height: 80px;
     width: 85%;
-    margin-top: 30px;
+    margin-top: 15px;
     margin-left: 7.5%;
     border-radius: 5px;
     display: flex;
     align-items: center;
     justify-content: space-between;
     position: fixed;
+    z-index: 99999;
     box-shadow: 1px 5px 8px rgb(177, 170, 170);
 }
 
