--- a/src/Components/Banner.css
+++ b/src/Components/Banner.css
@@ -3,15 +3,15 @@
     padding: 0;
 }
 
-.banner-container{
-    background: url(../assets/banner.jpg);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 630px;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.banner-container {
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
 }
+
+.banner-container video {
+  height: 100%;
+  object-fit: fill;
+}
+
 
