--- a/src/Components/Landing.css
+++ b/src/Components/Landing.css
@@ -8,7 +8,7 @@
 }
 
 .landing-container {
-    background-color: red;
+    /* background-color: red; */
     height: 1000px;
     width: 100%;
     display: flex;
@@ -18,7 +18,7 @@
 }
 
 .landing-sections-container {
-    background-color: aqua;
+    /* background-color: aqua; */
     height: 500px;
     width: 85%;
     display: flex;
@@ -85,7 +85,7 @@
 }
 
 .sellers-head p{
-    font-size: 25px;
+    font-size: 35px;
     font-weight: 600;
 }
 
