--- a/src/Components/AdidasBanner.css
+++ b/src/Components/AdidasBanner.css
@@ -4,7 +4,7 @@
 }
 
 .adidas-banner-container{
-    background: url(../assets/adidas_banner.avif);
+    background: url(../assets/adidas_Banner.png);
     background-position: center;
     background-repeat: no-repeat;
     background-size: 100%;
