--- a/src/Components/FilteredProducts.css
+++ b/src/Components/FilteredProducts.css
@@ -7,38 +7,25 @@
     font-family: "Poppins", sans-serif;
 }
 
-.adidas-home {
+.filtered-listing{
+    height: min-content;
     width: 100%;
+    padding: 150px 0;
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    align-items: start;
+    justify-content: center;
+    z-index: 99;
 }
 
-.adidas-listing-container {
-    /* background-color: red; */
-    width: 85%;
-    padding: 40px 0;
-}
-
-.adidas-listing-head {
-    text-align: center;
-    margin-bottom: 30px;
-}
-
-.adidas-listing-head p {
-    font-size: 35px;
-    font-weight: 600;
-}
-
-.adidas-listing {
-    /* background-color: yellow; */
+.filtered{
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     justify-items: center;
-    gap: 40px;
+    width: 85%;
+    gap: 50px;
 }
 
-.adidas-card {
+.filtered-card {
     background-color: #fff;
     height: 450px;
     width: 330px;
@@ -51,25 +38,25 @@
     gap: 10px;
 }
 
-.adidas-card img {
+.filtered-card img {
     height: 73%;
     width: 100%;
     object-fit: contain;
     transition: transform 0.2s ease-in-out;
 }
 
-.adidas-card img:hover{
+.filtered-card img:hover{
     transform: translateY(-5px);
 }
 
-.adidas-card h4 {
+.filtered-card h4 {
     font-size: 15px;
     font-weight: 600;
     margin-left: 10px;
     margin-bottom: 0;
 }
 
-.adidas-card p {
+.filtered-card p {
     font-size: 14px;
     font-weight: 500;
     color: #555;
@@ -77,7 +64,7 @@
     margin-bottom: 0;
 }
 
-.adidas-card button {
+.filtered-card button {
     margin-left: 10px;
     font-size: 15px;
     font-weight: 600;
@@ -90,7 +77,7 @@
     transition: all 0.2s ease-in-out;
 }
 
-.adidas-card button:hover {
+.filtered-card button:hover {
     background-color: #000;
     color: #fff;
 }
