--- a/src/Components/Landing.css
+++ b/src/Components/Landing.css
@@ -8,18 +8,17 @@
 }
 
 .landing-container {
-    /* background-color: red; */
     height: 1000px;
     width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    margin-top: 120px;
 }
 
 .landing-sections-container {
-    /* background-color: aqua; */
-    height: 500px;
+    height: min-content;
     width: 85%;
     display: flex;
     align-items: center;
@@ -56,17 +55,16 @@
 }
 
 .best-sellers-container {
-    background-color: yellow;
-    height: 500px;
+    height: min-content;
     width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    margin: 80px 0;
 }
 
 .best-sellers{
-    background-color: brown;
     height: 100%;
     width: 85%;
     display: flex;
@@ -76,12 +74,12 @@
 }
 
 .sellers-head{
-    background-color: lavender;
     height: 15%;
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
+    padding: 0;
 }
 
 .sellers-head p{
@@ -90,17 +88,15 @@
 }
 
 .sellers{
-    background-color: blue;
-    height: 85%;
+    height: min-content;
     width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    justify-items: center;
 }
 
 .sellers-card{
-    background-color: brown;
     height: 95%;
-    width: 22%;
+    width: 19%;
 }
 
