--- a/src/Components/AdidasListing.css
+++ b/src/Components/AdidasListing.css
@@ -51,14 +51,14 @@
     gap: 10px;
 }
 
-.adidas-card img {
+.card-image {
     height: 73%;
     width: 100%;
     object-fit: contain;
     transition: transform 0.2s ease-in-out;
 }
 
-.adidas-card img:hover{
+.card-image:hover{
     transform: translateY(-5px);
 }
 
@@ -75,6 +75,30 @@
     color: #555;
     margin-left: 10px;
     margin-bottom: 0;
+}
+
+.card-bottom{
+    height: min-content;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.card-bottom-icons{
+    height: 100%;
+    width: min-content;
+    display: flex;
+    align-items: center;
+    justify-content: end;
+    padding-right: 10px;
+    gap: 10px;
+}
+
+.card-bottom-icons img{
+    height: 30px;
+    width: 30px;
+    cursor: pointer;
 }
 
 .adidas-card button {
