--- a/src/Components/Cart.css
+++ b/src/Components/Cart.css
@@ -100,7 +100,6 @@
     overflow-y: auto;
     padding-bottom: 120px;
     scroll-behavior: smooth;
-
 }
 
 .cart-product-card {
@@ -241,17 +240,46 @@
     justify-content: center;
 }
 
+/* From Uiverse.io by NorthFishHasNa */ 
 .cart-foot-mid button {
-    background-color: #262626;
-    color: #fff;
-    height: 100%;
-    width: 90%;
-    cursor: pointer;
-    font-size: 15px;
+ display: inline-block;
+ border-radius: 4px;
+ background-color: #000;
+ border: none;
+ color: #FFFFFF;
+ text-align: center;
+ font-size: 17px;
+ padding: 16px;
+ height: 55px;
+ width: 80%;
+ transition: all 0.5s;
+ cursor: pointer;
+ margin: 5px;
 }
 
-.cart-foot-mid button:hover {
-    background-color: #000;
+.cart-foot-mid button span {
+ cursor: pointer;
+ display: inline-block;
+ position: relative;
+ transition: 0.5s;
+}
+
+.cart-foot-mid button span:after {
+ content: '»';
+ position: absolute;
+ opacity: 0;
+ top: 0;
+ right: -15px;
+ transition: 0.5s;
+}
+
+.cart-foot-mid button:hover span {
+ padding-right: 15px;
+}
+
+.cart-foot-mid button:hover span:after {
+ opacity: 1;
+ right: 0;
 }
 
 .cart-foot-bottom {
