--- a/src/Components/Footer.css
+++ b/src/Components/Footer.css
@@ -32,7 +32,6 @@
     height: 100%;
     width: 30%;
     display: flex;
-    flex-direction: column;
     align-items: center;
     justify-content: center;
 }
@@ -76,11 +75,12 @@
 }
 
 .footer-bottom{
-    height: 15%;
+    height: 20%;
     width: 85%;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    padding-bottom: 15px;
 }
 
 .footer-bottom-left{
