--- a/src/Components/Favourites.css
+++ b/src/Components/Favourites.css
@@ -6,3 +6,66 @@
     box-sizing: border-box;
     font-family: "Poppins", sans-serif;
 }
+
+.fav-main{
+    height: 100vh;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 150px 0;
+    gap: 30px;
+}
+
+.fav-main P{
+    font-size: 35px;
+    font-weight: 600;
+}
+
+.fav-container{
+    height: 100%;
+    width: 85%;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    justify-items: center;
+}
+
+.fav-container h5{
+    color: #c2bebe;
+    font-size: 18px;
+    font-weight: 500;
+    text-align: center;
+}
+
+.fav-card-bottom{
+    height: min-content;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 10px;
+}
+
+.fav-card-bottom img{
+    height: 30px;
+    width: 30px;
+    cursor: pointer;
+}
+
+.fav-atc-btn{
+    font-size: 15px;
+    font-weight: 600;
+    height: 35px;
+    width: 120px;
+    background-color: transparent;
+    border: 1px solid #c2bebe;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: all 0.2s ease-in-out;
+}
+
+.fav-atc-btn:hover {
+    background-color: #000;
+    color: #fff;
+}
