--- a/src/Components/About.css
+++ b/src/Components/About.css
@@ -9,18 +9,20 @@
 
 /* About Us Section */
 .about-us {
-    background-color: #fff; /* White background */
-    color: #000; /* Default text black */
-    padding: 80px 20px;
+    background-color: #fff;
+    color: #000; 
+    height: 100vh;
+    width: 100%;
     font-family: 'Poppins', sans-serif;
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     text-align: center;
 }
 
 .about-us h2 {
-    color: #ff6600; /* Orange heading */
+    color: #000; /* Orange heading */
     font-size: 36px;
     margin-bottom: 20px;
     font-weight: 700;
