--- a/src/Components/FilteredProducts.css
+++ b/src/Components/FilteredProducts.css
@@ -90,7 +90,7 @@
     color: #fff;
 }
 
-.filtered-listing p{
+.filtered-listing h5{
     color: #c2bebe;
     font-size: 18px;
     font-weight: 500;
