--- a/src/Components/AdidasListing.css
+++ b/src/Components/AdidasListing.css
@@ -12,6 +12,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    animation: fadeInUp 0.6s ease-in-out;
 }
 
 .adidas-listing-container {
@@ -146,4 +147,16 @@
 .atc-btn:hover {
     background-color: #000;
     color: #fff;
+}
+
+/* Amimation */
+@keyframes fadeInUp {
+  0% {
+    opacity: 0;
+    transform: translateY(30px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
