--- a/src/Components/Cart.css
+++ b/src/Components/Cart.css
@@ -94,11 +94,18 @@
 }
 
 .cart-list {
-    flex: 1;
-    width: 100%;
-    overflow-y: auto;
-    padding-bottom: 120px;
-    scroll-behavior: smooth;
+  flex: 1;
+  width: 100%;
+  overflow-y: auto;
+  padding-bottom: 150px;
+  scroll-behavior: smooth;
+
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; /* IE & Edge */
+}
+
+.cart-list::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, Opera */
 }
 
 .cart-product-card {
