--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,23 @@
 }
 
 /* Animation for forward (Signup -> Login) */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 .page-enter {
   transform: translateX(100%);
 }
@@ -27,4 +44,15 @@
 .page-exit-active {
   transform: translateX(-100%);
   transition: transform 0.6s ease-in-out;
+}
+
+@keyframes fadeInUp {
+  0% {
+    opacity: 0;
+    transform: translateY(30px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
